# minigit

./: .clang-format  .gitignore  .mignore  BUILD_STATUS.md  CLONE_IMPLEMENTATION.md  CMakeLists.txt  README.md  REFACTOR_GUIDE.md  SERVER_IMPLEMENTATION.md  SHA_PERFORMANCE_OPTIMIZATION.md  build.bat  build.sh  build_server.bat  demo_clone.bat  demo_complete.bat  demo_file_status.bat  demo_reset.bat  demo_server.bat  test_add_debug.bat  test_add_deleted.bat  test_auth_debug.bat  test_basic.bat  test_clone.bat  test_clone_remote.bat  test_commit_contents.bat  test_complete_push.bat  test_comprehensive_add_delete.bat  test_comprehensive_historical.bat  test_diff.bat  test_encryption.sh  test_enhanced_log.bat  test_final_push.bat  test_fixed_push.bat  test_historical_deletion.bat  test_list_repos.bat  test_log.bat  test_network_push.bat  test_network_push_fixed.bat  test_network_remote.bat  test_path_debug.bat  (+13 more)
.minigit/: config
include/: lz4.h  lz4file.h  lz4frame.h  lz4frame_static.h  lz4hc.h  xxhash.h
src/: aes.c  aes.h  aes.hpp  client.cpp  client.h  commands.cpp  commands.h  commands_basic.cpp  commands_basic.h  commands_history.cpp  commands_history.h  commands_original.cpp  commands_remote.cpp  commands_remote.h  commit.cpp  commit.h  common.h  compression.cpp  compression.h  crypto.cpp  crypto.h  filesystem_utils.cpp  filesystem_utils.h  index.cpp  index.h  main.cpp  mignore.cpp  mignore.h  objects.cpp  objects.h  progress.cpp  progress.h  protocol.cpp  protocol.h  server.cpp  server.h  sha256.cpp  sha256.h  utils.h
